# RiseOn.Agents

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run-tui.sh
.specify/: init-options.json
.specify/memory/: constitution.md
agents/architect/: architect.agent.md
agents/architect/rules/: architecture-rules.instructions.md  ddd-rules.instructions.md  documentation-structure.md  microservices-rules.instructions.md  nfr-framework.md
agents/architect/subagents/: adr-generator.agent.md  ddd-specialist.agent.md  governance-specialist.agent.md  hlbpa-specialist.agent.md  mermaid-diagrammer.agent.md  microservices-specialist.agent.md  system-architecture-reviewer.agent.md  technical-writer.agent.md
agents/devops-engineer/: devops-engineer.agent.md
agents/devops-engineer/rules/: cicd-rules.instructions.md  infrastructure-rules.instructions.md
agents/devops-engineer/subagents/: cicd-specialist.agent.md  cloud-architect.agent.md  security-auditor.agent.md
agents/product-manager/: product-manager.agent.md
agents/product-manager/rules/: requirements-rules.instructions.md  user-collaboration.guardrails.md  user-story-rules.instructions.md
agents/product-manager/subagents/: market-researcher.agent.md  mvp-definer.agent.md  product-strategist.agent.md  requirements-analyst.agent.md  roadmap-planner.agent.md
agents/product-owner/: product-owner.agent.md
agents/product-owner/subagents/: acceptance-criteria-writer.agent.md  agile-coach.agent.md  backlog-manager.agent.md  sprint-planner.agent.md
agents/software-engineer/: software-engineer.agent.md
agents/software-engineer/rules/: coding-rules.instructions.md  testing-rules.instructions.md
agents/software-engineer/subagents/: api-architect.agent.md  code-reviewer.agent.md  dotnet-specialist.agent.md  frontend-developer.agent.md  refactoring-specialist.agent.md  test-writer.agent.md
specs/002-kilocode-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-kilocode-generator/checklists/: requirements.md
specs/002-kilocode-generator/contracts/: generator-output.md  tui-interactions.md
specs/004-tui-improvements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-tui-improvements/checklists/: requirements.md
specs/004-tui-improvements/contracts/: ui-contracts.md
src/riseon_agents/: __init__.py  __main__.py  app.py
src/riseon_agents/generation/: __init__.py  generator.py  modes.py  rules.py  skills.py  subagents.py
src/riseon_agents/models/: __init__.py  agent.py  generation.py  rule.py  selection.py  skill.py
src/riseon_agents/parsing/: __init__.py  frontmatter.py  repository.py
src/riseon_agents/screens/: __init__.py  dialogs.py  main.py  splash.py  target_dialog.py
tests/: conftest.py
tests/test_generation/: test_generator.py  test_modes.py  test_rules.py  test_skills.py  test_subagents.py
tests/test_models/: test_agent.py  test_generation.py  test_selection.py
tests/test_parsing/: test_frontmatter.py  test_repository.py
tests/test_screens/: __init__.py  test_dialogs.py  test_splash.py  test_target_dialog.py
tests/test_utils/: test_emoji.py
tests/test_widgets/: test_agent_tree.py  test_header.py  test_preview.py
(+84 files in other folders)
